8229350: Shenandoah does not need barriers before CreateEx

Reviewed-by: rkennke